# navigation_study

./: Navigation Move_Base代码阅读.md  README.md  clear_costmap_recovery包代码解读.md  costmap_2d包深度理解和代码解析.md  costmap_2d学习.md  detect_recovery.cpp代码阅读.md  nav_core包代码阅读.md  navigation导航包中rotate_recovery源码解读.md
catkin_navigation/devel/: .catkin  local_setup.sh
catkin_navigation/devel/include/amcl/: AMCLConfig.h
catkin_navigation/devel/include/base_local_planner/: Position2DInt.h
catkin_navigation/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
catkin_navigation/devel/include/global_planner/: GlobalPlannerConfig.h
catkin_navigation/devel/lib/amcl/: amcl
catkin_navigation/devel/lib/base_local_planner/: point_grid
catkin_navigation/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
catkin_navigation/devel/lib/fake_localization/: fake_localization
catkin_navigation/devel/lib/global_planner/: planner
catkin_navigation/devel/lib/map_server/: map_saver  map_server  rtest
catkin_navigation/devel/lib/move_base/: move_base
catkin_navigation/devel/lib/navfn/: navfn_node  navtest
catkin_navigation/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  robot_pose_ekf.pc  rotate_recovery.pc  voxel_grid.pc
catkin_navigation/devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
catkin_navigation/devel/share/amcl/cmake/: amclConfig.cmake
catkin_navigation/devel/share/base_local_planner/cmake/: base_local_planner-msg-extras.cmake  base_local_planner-msg-paths.cmake  base_local_plannerConfig.cmake
catkin_navigation/devel/share/carrot_planner/cmake/: carrot_plannerConfig.cmake
catkin_navigation/devel/share/clear_costmap_recovery/cmake/: clear_costmap_recoveryConfig.cmake
catkin_navigation/devel/share/costmap_2d/cmake/: costmap_2d-msg-extras.cmake  costmap_2d-msg-paths.cmake  costmap_2dConfig.cmake
catkin_navigation/devel/share/dwa_local_planner/cmake/: dwa_local_plannerConfig.cmake
catkin_navigation/devel/share/fake_localization/cmake/: fake_localizationConfig.cmake
catkin_navigation/devel/share/global_planner/cmake/: global_plannerConfig-version.cmake  global_plannerConfig.cmake
detect_recovery/: CHANGELOG.rst  CMakeLists.txt  detect_plugin.xml  package.xml
detect_recovery/include/detect_recovery/: detect_recovery.h
detect_recovery/src/: detect_recovery.cpp
(+17 files in other folders)
